[package]
name = "esp-study"
version = "0.1.0"
authors = ["nan-mu <mu.nan.11@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
max7219 = "0.4.2"
esp-hal = { version = "0.16.1", features = ["esp32c3"] }
embedded-hal-bus = "0.1.0"
